--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-dash==2.4.1
+dash==2.*
 dash_ag_grid==31.2.0
 dash_bootstrap_components==1.1.0
-dash_leaflet==1.0.15
+dash_leaflet==1.*
 fastapi==0.111.1
 geopy==2.2.0
 numpy==1.22.2
