--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-dash==2.*
+dash==2.4.1
 dash_ag_grid==31.2.0
 dash_bootstrap_components==1.1.0
-dash_leaflet==1.*
 fastapi==0.111.1
-geopy==2.2.0
-numpy==1.*
-pandas==1.*
 plotly==5.6.0
-requests==2.32.3
+requests==2.27.1
+uvicorn==0.20.0
+numpy==1.21.6
+pandas==1.3.5
+httpcore==0.17.3
+Jinja2==3.1.2
+MarkupSafe==2.1.3
