--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ fastapi==0.111.1
 plotly==5.6.0
 requests==2.27.1
 uvicorn==0.20.0
-numpy==1.21.6
-pandas==1.3.5
+numpy==1.x
+pandas==1.x
 httpcore==0.17.3
 Jinja2==3.1.2
 MarkupSafe==2.1.3
