--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ dash_bootstrap_components==1.1.0
 fastapi==0.111.1
 plotly==5.6.0
 requests==2.27.1
-uvicorn==0.20.0
+uvicorn==0.x
 numpy==1.x
 pandas==1.x
 httpcore==0.17.3
