--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-dash==2.4.1
+dash==2.*
 dash_ag_grid==31.2.0
 dash_bootstrap_components==1.1.0
 fastapi==0.111.1
+numpy==1.*
+pandas==1.*
 plotly==5.6.0
-requests==2.27.1
-numpy==1.x
-pandas==1.x
-httpcore==0.17.3
-Jinja2==3.1.2
-MarkupSafe==2.1.3
+requests==2.32.3
