--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 dash==2.*
 dash_ag_grid==31.2.0
 dash_bootstrap_components==1.1.0
+dash_leaflet==1.*
 fastapi==0.111.1
+geopy==2.2.0
 numpy==1.*
 pandas==1.*
 plotly==5.6.0
+pymongo==4.8.0
 requests==2.32.3
